--- a/src/main/webapp/todo.zul
+++ b/src/main/webapp/todo.zul
@@ -1,5 +1,7 @@
 <?script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"?>
 <?script type="text/javascript" src="todo-zk.js"?>
+<?link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"?>
+<?link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"?>
 <zk xmlns:n="native" xmlns:ca="client/attribute" >
     Todo
     <div id="content" viewModel="@id('vm') @init('org.zkoss.zkangular.TodoVM')" ca:ng-app="todoApp">
@@ -15,7 +17,7 @@
 	      <n:form ng-submit="todoList.addTodo()">
 	        <n:input type="text" ng-model="todoList.todoText"  size="30"
 	               placeholder="add new todo here"/>
-	        <n:input class="btn-primary" type="submit" value="add"/>
+	        <n:input class="btn btn-primary" type="submit" value="add"/>
 	      </n:form>
 	    </n:div>
     </div>
